// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "set-type",
    undefined,
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={true}
    overlay={
      <SetTypePopup
        issue={
          Object {
            "type": "BUG",
          }
        }
        onSelect={[Function]}
      />
    }
  >
    <ButtonLink
      aria-expanded={true}
      aria-label="issue.type.type_x_click_to_change.issue.type.BUG"
      className="issue-action issue-action-with-options js-issue-set-type"
      onClick={[Function]}
    >
      <IssueTypeIcon
        className="little-spacer-right"
        fill="#333"
        query="BUG"
      />
      issue.type.BUG
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render with the action 1`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <SetTypePopup
        issue={
          Object {
            "type": "BUG",
          }
        }
        onSelect={[Function]}
      />
    }
  >
    <ButtonLink
      aria-expanded={false}
      aria-label="issue.type.type_x_click_to_change.issue.type.BUG"
      className="issue-action issue-action-with-options js-issue-set-type"
      onClick={[Function]}
    >
      <IssueTypeIcon
        className="little-spacer-right"
        fill="#333"
        query="BUG"
      />
      issue.type.BUG
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render without the action when the correct rights are missing 1`] = `
<span>
  <IssueTypeIcon
    className="little-spacer-right"
    query="BUG"
  />
  issue.type.BUG
</span>
`;
